Refactored and organized folders

--- a/swoosh/Base.lproj/Main.storyboard
+++ b/swoosh/Base.lproj/Main.storyboard
@@ -15,10 +15,10 @@
         </array>
     </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--WelcomeVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="swoosh" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WelcomeVC" customModule="swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -60,6 +60,9 @@
                                 <state key="normal" title="GET STARTED">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="Rsn-Xx-K6B" kind="show" id="PY9-3S-kxP"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -93,10 +96,10 @@
             </objects>
             <point key="canvasLocation" x="116.25" y="123.59154929577466"/>
         </scene>
-        <!--View Controller-->
+        <!--LeagueVC-->
         <scene sceneID="kv6-qI-Fox">
             <objects>
-                <viewController id="Rsn-Xx-K6B" sceneMemberID="viewController">
+                <viewController id="Rsn-Xx-K6B" customClass="LeagueVC" customModule="swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Y9T-z3-KIy">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -171,6 +174,17 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HNt-DU-emX">
+                                <rect key="frame" x="16" y="10" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="c2k-nf-HsY"/>
+                                    <constraint firstAttribute="height" constant="40" id="lcb-l7-hGa"/>
+                                </constraints>
+                                <state key="normal" image="backButton"/>
+                                <connections>
+                                    <segue destination="5OA-yu-3lH" kind="unwind" unwindAction="undwindFromSkillVCWithUnwindSeque:" id="wyX-FH-75A"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -182,6 +196,8 @@
                             <constraint firstItem="yEr-wo-riY" firstAttribute="trailing" secondItem="rYm-yI-cox" secondAttribute="trailing" id="Kjg-MC-E92"/>
                             <constraint firstItem="yEr-wo-riY" firstAttribute="leading" secondItem="rYm-yI-cox" secondAttribute="leading" id="Ldu-Jc-obW"/>
                             <constraint firstItem="rYm-yI-cox" firstAttribute="bottom" secondItem="bVR-UX-boA" secondAttribute="bottom" constant="20" id="QAt-1f-o5c"/>
+                            <constraint firstItem="HNt-DU-emX" firstAttribute="leading" secondItem="rYm-yI-cox" secondAttribute="leading" constant="16" id="Zav-jo-S8R"/>
+                            <constraint firstItem="HNt-DU-emX" firstAttribute="top" secondItem="Y9T-z3-KIy" secondAttribute="top" constant="10" id="juL-w3-5B4"/>
                             <constraint firstItem="9ZL-5J-NZr" firstAttribute="top" secondItem="dmF-lH-9Hq" secondAttribute="bottom" constant="50" id="mNz-s4-mEf"/>
                             <constraint firstItem="rYm-yI-cox" firstAttribute="trailing" secondItem="dmF-lH-9Hq" secondAttribute="trailing" constant="16" id="nh0-Ci-zhl"/>
                             <constraint firstItem="yEr-wo-riY" firstAttribute="bottom" secondItem="rYm-yI-cox" secondAttribute="bottom" id="siR-xn-PBG"/>
@@ -192,13 +208,14 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N8K-pw-WVS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="5OA-yu-3lH" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="871.01449275362324" y="123.09782608695653"/>
         </scene>
-        <!--View Controller-->
+        <!--SkillVC-->
         <scene sceneID="BUg-To-22M">
             <objects>
-                <viewController id="Trx-dU-dQT" sceneMemberID="viewController">
+                <viewController id="Trx-dU-dQT" customClass="SkillVC" customModule="swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4L5-9i-KTG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -288,6 +305,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="backButton" width="29" height="24"/>
         <image name="beginnerBallerBG" width="414" height="736"/>
         <image name="desiredLeagueBG" width="414" height="736"/>
         <image name="swooshLogo" width="119" height="20"/>
